Startup: DB context to connect SqlServer DB using UseSqlServer.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,6 @@
 {
+  "DefaultConnection": "AQUI VA EL CONNECTIONSTRING A SQL SERVER",
+  
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
