--- a/AspIron.csproj
+++ b/AspIron.csproj
@@ -9,6 +9,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.4" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" />
     </ItemGroup>
 
     <ItemGroup>
